--- a/iPortfolio/index.html
+++ b/iPortfolio/index.html
@@ -92,42 +92,37 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Quem Somos ?</h2>
-        <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
         <div class="row gy-4 justify-content-center">
           <div class="col-lg-4">
-            <img src="assets/img/my-profile-img.jpg" class="img-fluid" alt="">
+            <img src="assets/img/casal.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 content">
-            <h2>UI/UX Designer &amp; Web Developer.</h2>
+            <h2>Fotografia &amp; VideoMakers</h2>
             <p class="fst-italic py-3">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              Um casal cristão que se esforça a cada dia para que seus momentos singulares se tornem permanentes.
             </p>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>1 May 1995</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+123 456 7890</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>New York, USA</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Fundação:</strong> <span>21/10/2024</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Site:</strong> <span>www.plenitudeproducoes.com.br</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Telefone:</strong> <span>+55 31 99718-7897</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>30</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>email@example.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>E-mail:</strong> <span>plenitudeproduc@gmail.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Cidade:</strong> <span>Contagem, Minas Gerais</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Idade:</strong> <span>22 e 20</span></li>
                 </ul>
               </div>
             </div>
             <p class="py-3">
-              Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-              Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque.
+              Um casal que ama contemplar, analisar e registrar momentos singulares. Entendemos que a fotografia e a produção de vídeos não é somente sobre algo belo, mas que também carrega consigo um compilado de sentimentos e emoções, congelando um momento de uma história permanentemente. Diante disso, nosso papel é registrar esses momentos de forma sensível e realista para que este momento seja sempre vívido no coração dos nossos clientes.
             </p>
           </div>
         </div>
