Inclusão do depoimento da Tati

--- a/index.html
+++ b/index.html
@@ -500,8 +500,7 @@
         <div class="container section-title" data-aos="fade-up">
           <h2>Depoimentos</h2>
           <p>
-            Necessitatibus eius consequatur ex aliquid fuga eum quidem sint
-            consectetur velit
+            Acompanhe os feedbacks dos nossos clientes
           </p>
         </div>
         <!-- End Section Title -->
@@ -539,20 +538,17 @@
                   <p>
                     <i class="bi bi-quote quote-icon-left"></i>
                     <span
-                      >Proin iaculis purus consequat sem cure digni ssim donec
-                      porttitora entum suscipit rhoncus. Accusantium quam,
-                      ultricies eget id, aliquam eget nibh et. Maecen aliquam,
-                      risus at semper.</span
+                      >Deu para sentir o carinho em cada detalhe!! Saiu como eu imaginei, vocês são ótimos! Que venham as próximas!!</span
                     >
                     <i class="bi bi-quote quote-icon-right"></i>
                   </p>
                   <img
-                    src="assets/img/testimonials/testimonials-1.jpg"
+                    src="assets/img/testimonials/tati.jpg"
                     class="testimonial-img"
                     alt=""
                   />
-                  <h3>Saul Goodman</h3>
-                  <h4>Ceo &amp; Founder</h4>
+                  <h3>Tatiane</h3>
+                  <h4>Manicure &amp; mãe</h4>
                 </div>
               </div>
               <!-- End testimonial item -->
@@ -661,8 +657,7 @@
         <div class="container section-title" data-aos="fade-up">
           <h2>Contato</h2>
           <p>
-            Necessitatibus eius consequatur ex aliquid fuga eum quidem sint
-            consectetur velit
+            Gostou dos nossos serviços ? Entre em contato conosco, não perca a chance de eternizar seus momentos!!
           </p>
         </div>
         <!-- End Section Title -->
