inversão dos nomes quem somos

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
               <img src="assets/img/casal.jpg" class="img-fluid" alt="" />
             </div>
             <div class="col-lg-8 content">
-              <h2>Ludmila &amp; Thales</h2>
+              <h2>Thales &amp; Ludmila</h2>
               <p class="fst-italic py-3">
                 Um casal cristão que se esforça a cada dia para que seus
                 momentos singulares se tornem permanentes.
